src/grammar/ShellGrammarParser.py
# Generated from src/grammar/ShellGrammar.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ShellGrammarParser ( Parser ):

    grammarFileName = "ShellGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<'", "'>'", "'>>'", "<INVALID>", "<INVALID>", 
                     "';'", "'|'", "'''", "'`'", "'\"'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "WS", "NON_KEYWORD", "SEMICOLON", "BAR", "SQUOTE", 
                      "BQUOTE", "DQUOTE" ]

    RULE_prog = 0
    RULE_command = 1
    RULE_pipe = 2
    RULE_call = 3
    RULE_argument = 4
    RULE_atom = 5
    RULE_redirection = 6
    RULE_quoted = 7
    RULE_single_quoted = 8
    RULE_back_quoted = 9
    RULE_double_quoted = 10
    RULE_single_quoted_content = 11
    RULE_back_quoted_content = 12
    RULE_double_quoted_content = 13

    ruleNames =  [ "prog", "command", "pipe", "call", "argument", "atom", 
                   "redirection", "quoted", "single_quoted", "back_quoted", 
                   "double_quoted", "single_quoted_content", "back_quoted_content", 
                   "double_quoted_content" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    WS=4
    NON_KEYWORD=5
    SEMICOLON=6
    BAR=7
    SQUOTE=8
    BQUOTE=9
    DQUOTE=10

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(ShellGrammarParser.CommandContext,0)


        def EOF(self):
            return self.getToken(ShellGrammarParser.EOF, 0)

        def getRuleIndex(self):
            return ShellGrammarParser.RULE_prog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = ShellGrammarParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.command(0)
            self.state = 29
            self.match(ShellGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ShellGrammarParser.RULE_command

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class SeqCmdContext(CommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShellGrammarParser.CommandContext
            super().__init__(parser)
            self.left = None # CommandContext
            self.right = None # CommandContext
            self.copyFrom(ctx)

        def SEMICOLON(self):
            return self.getToken(ShellGrammarParser.SEMICOLON, 0)
        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShellGrammarParser.CommandContext)
            else:
                return self.getTypedRuleContext(ShellGrammarParser.CommandContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeqCmd" ):
                return visitor.visitSeqCmd(self)
            else:
                return visitor.visitChildren(self)


    class PipeCmdContext(CommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShellGrammarParser.CommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def pipe(self):
            return self.getTypedRuleContext(ShellGrammarParser.PipeContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPipeCmd" ):
                return visitor.visitPipeCmd(self)
            else:
                return visitor.visitChildren(self)


    class CallCmdContext(CommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShellGrammarParser.CommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def call(self):
            return self.getTypedRuleContext(ShellGrammarParser.CallContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallCmd" ):
                return visitor.visitCallCmd(self)
            else:
                return visitor.visitChildren(self)



    def command(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ShellGrammarParser.CommandContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_command, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                localctx = ShellGrammarParser.PipeCmdContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 32
                self.pipe(0)
                pass

            elif la_ == 2:
                localctx = ShellGrammarParser.CallCmdContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 33
                self.call()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 41
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ShellGrammarParser.SeqCmdContext(self, ShellGrammarParser.CommandContext(self, _parentctx, _parentState))
                    localctx.left = _prevctx
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_command)
                    self.state = 36
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 37
                    self.match(ShellGrammarParser.SEMICOLON)
                    self.state = 38
                    localctx.right = self.command(3) 
                self.state = 43
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class PipeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ShellGrammarParser.RULE_pipe

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class RecursivePipeContext(PipeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShellGrammarParser.PipeContext
            super().__init__(parser)
            self.left = None # PipeContext
            self.right = None # CallContext
            self.copyFrom(ctx)

        def BAR(self):
            return self.getToken(ShellGrammarParser.BAR, 0)
        def pipe(self):
            return self.getTypedRuleContext(ShellGrammarParser.PipeContext,0)

        def call(self):
            return self.getTypedRuleContext(ShellGrammarParser.CallContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRecursivePipe" ):
                return visitor.visitRecursivePipe(self)
            else:
                return visitor.visitChildren(self)


    class SimplePipeContext(PipeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShellGrammarParser.PipeContext
            super().__init__(parser)
            self.left = None # CallContext
            self.right = None # CallContext
            self.copyFrom(ctx)

        def BAR(self):
            return self.getToken(ShellGrammarParser.BAR, 0)
        def call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShellGrammarParser.CallContext)
            else:
                return self.getTypedRuleContext(ShellGrammarParser.CallContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimplePipe" ):
                return visitor.visitSimplePipe(self)
            else:
                return visitor.visitChildren(self)



    def pipe(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ShellGrammarParser.PipeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_pipe, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = ShellGrammarParser.SimplePipeContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 45
            localctx.left = self.call()
            self.state = 46
            self.match(ShellGrammarParser.BAR)
            self.state = 47
            localctx.right = self.call()
            self._ctx.stop = self._input.LT(-1)
            self.state = 54
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ShellGrammarParser.RecursivePipeContext(self, ShellGrammarParser.PipeContext(self, _parentctx, _parentState))
                    localctx.left = _prevctx
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_pipe)
                    self.state = 49
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 50
                    self.match(ShellGrammarParser.BAR)
                    self.state = 51
                    localctx.right = self.call() 
                self.state = 56
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class CallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.app = None # Token

        def NON_KEYWORD(self):
            return self.getToken(ShellGrammarParser.NON_KEYWORD, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(ShellGrammarParser.WS)
            else:
                return self.getToken(ShellGrammarParser.WS, i)

        def argument(self):
            return self.getTypedRuleContext(ShellGrammarParser.ArgumentContext,0)


        def getRuleIndex(self):
            return ShellGrammarParser.RULE_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)




    def call(self):

        localctx = ShellGrammarParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 57
                self.match(ShellGrammarParser.WS)


            self.state = 60
            localctx.app = self.match(ShellGrammarParser.NON_KEYWORD)
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 61
                self.match(ShellGrammarParser.WS)
                self.state = 62
                self.argument()


            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 65
                self.match(ShellGrammarParser.WS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShellGrammarParser.AtomContext)
            else:
                return self.getTypedRuleContext(ShellGrammarParser.AtomContext,i)


        def redirection(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ShellGrammarParser.RedirectionContext)
            else:
                return self.getTypedRuleContext(ShellGrammarParser.RedirectionContext,i)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(ShellGrammarParser.WS)
            else:
                return self.getToken(ShellGrammarParser.WS, i)

        def getRuleIndex(self):
            return ShellGrammarParser.RULE_argument

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgument" ):
                return visitor.visitArgument(self)
            else:
                return visitor.visitChildren(self)




    def argument(self):

        localctx = ShellGrammarParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_argument)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0:
                self.state = 68
                self.redirection()
                self.state = 69
                self.match(ShellGrammarParser.WS)
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self.atom()
            self.state = 84
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 77
                    self.match(ShellGrammarParser.WS)
                    self.state = 80
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [1, 2, 3]:
                        self.state = 78
                        self.redirection()
                        pass
                    elif token in [5, 8, 9, 10]:
                        self.state = 79
                        self.atom()
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 86
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def quoted(self):
            return self.getTypedRuleContext(ShellGrammarParser.QuotedContext,0)


        def NON_KEYWORD(self):
            return self.getToken(ShellGrammarParser.NON_KEYWORD, 0)

        def getRuleIndex(self):
            return ShellGrammarParser.RULE_atom

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = ShellGrammarParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_atom)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8, 9, 10]:
                self.state = 87
                self.quoted()
                pass
            elif token in [5]:
                self.state = 88
                self.match(ShellGrammarParser.NON_KEYWORD)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RedirectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ShellGrammarParser.RULE_redirection

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class RedirInputContext(RedirectionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShellGrammarParser.RedirectionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(ShellGrammarParser.AtomContext,0)

        def WS(self):
            return self.getToken(ShellGrammarParser.WS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRedirInput" ):
                return visitor.visitRedirInput(self)
            else:
                return visitor.visitChildren(self)


    class RedirAppendContext(RedirectionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShellGrammarParser.RedirectionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(ShellGrammarParser.AtomContext,0)

        def WS(self):
            return self.getToken(ShellGrammarParser.WS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRedirAppend" ):
                return visitor.visitRedirAppend(self)
            else:
                return visitor.visitChildren(self)


    class RedirOuputContext(RedirectionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ShellGrammarParser.RedirectionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(ShellGrammarParser.AtomContext,0)

        def WS(self):
            return self.getToken(ShellGrammarParser.WS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRedirOuput" ):
                return visitor.visitRedirOuput(self)
            else:
                return visitor.visitChildren(self)



    def redirection(self):

        localctx = ShellGrammarParser.RedirectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_redirection)
        self._la = 0 # Token type
        try:
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = ShellGrammarParser.RedirInputContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                localctx.op = self.match(ShellGrammarParser.T__0)
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 92
                    self.match(ShellGrammarParser.WS)


                self.state = 95
                self.atom()
                pass
            elif token in [2]:
                localctx = ShellGrammarParser.RedirOuputContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                localctx.op = self.match(ShellGrammarParser.T__1)
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 97
                    self.match(ShellGrammarParser.WS)


                self.state = 100
                self.atom()
                pass
            elif token in [3]:
                localctx = ShellGrammarParser.RedirAppendContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 101
                localctx.op = self.match(ShellGrammarParser.T__2)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 102
                    self.match(ShellGrammarParser.WS)


                self.state = 105
                self.atom()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuotedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def single_quoted(self):
            return self.getTypedRuleContext(ShellGrammarParser.Single_quotedContext,0)


        def back_quoted(self):
            return self.getTypedRuleContext(ShellGrammarParser.Back_quotedContext,0)


        def double_quoted(self):
            return self.getTypedRuleContext(ShellGrammarParser.Double_quotedContext,0)


        def getRuleIndex(self):
            return ShellGrammarParser.RULE_quoted

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuoted" ):
                return visitor.visitQuoted(self)
            else:
                return visitor.visitChildren(self)




    def quoted(self):

        localctx = ShellGrammarParser.QuotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_quoted)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.single_quoted()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.back_quoted()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.double_quoted()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Single_quotedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SQUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(ShellGrammarParser.SQUOTE)
            else:
                return self.getToken(ShellGrammarParser.SQUOTE, i)

        def single_quoted_content(self):
            return self.getTypedRuleContext(ShellGrammarParser.Single_quoted_contentContext,0)


        def getRuleIndex(self):
            return ShellGrammarParser.RULE_single_quoted

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingle_quoted" ):
                return visitor.visitSingle_quoted(self)
            else:
                return visitor.visitChildren(self)




    def single_quoted(self):

        localctx = ShellGrammarParser.Single_quotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_single_quoted)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(ShellGrammarParser.SQUOTE)
            self.state = 114
            self.single_quoted_content()
            self.state = 115
            self.match(ShellGrammarParser.SQUOTE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Back_quotedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BQUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(ShellGrammarParser.BQUOTE)
            else:
                return self.getToken(ShellGrammarParser.BQUOTE, i)

        def back_quoted_content(self):
            return self.getTypedRuleContext(ShellGrammarParser.Back_quoted_contentContext,0)


        def getRuleIndex(self):
            return ShellGrammarParser.RULE_back_quoted

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBack_quoted" ):
                return visitor.visitBack_quoted(self)
            else:
                return visitor.visitChildren(self)




    def back_quoted(self):

        localctx = ShellGrammarParser.Back_quotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_back_quoted)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(ShellGrammarParser.BQUOTE)
            self.state = 118
            self.back_quoted_content()
            self.state = 119
            self.match(ShellGrammarParser.BQUOTE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Double_quotedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DQUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(ShellGrammarParser.DQUOTE)
            else:
                return self.getToken(ShellGrammarParser.DQUOTE, i)

        def double_quoted_content(self):
            return self.getTypedRuleContext(ShellGrammarParser.Double_quoted_contentContext,0)


        def getRuleIndex(self):
            return ShellGrammarParser.RULE_double_quoted

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDouble_quoted" ):
                return visitor.visitDouble_quoted(self)
            else:
                return visitor.visitChildren(self)




    def double_quoted(self):

        localctx = ShellGrammarParser.Double_quotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_double_quoted)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(ShellGrammarParser.DQUOTE)
            self.state = 122
            self.double_quoted_content()
            self.state = 123
            self.match(ShellGrammarParser.DQUOTE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Single_quoted_contentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NON_KEYWORD(self, i:int=None):
            if i is None:
                return self.getTokens(ShellGrammarParser.NON_KEYWORD)
            else:
                return self.getToken(ShellGrammarParser.NON_KEYWORD, i)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(ShellGrammarParser.WS)
            else:
                return self.getToken(ShellGrammarParser.WS, i)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(ShellGrammarParser.SEMICOLON)
            else:
                return self.getToken(ShellGrammarParser.SEMICOLON, i)

        def BAR(self, i:int=None):
            if i is None:
                return self.getTokens(ShellGrammarParser.BAR)
            else:
                return self.getToken(ShellGrammarParser.BAR, i)

        def BQUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(ShellGrammarParser.BQUOTE)
            else:
                return self.getToken(ShellGrammarParser.BQUOTE, i)

        def DQUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(ShellGrammarParser.DQUOTE)
            else:
                return self.getToken(ShellGrammarParser.DQUOTE, i)

        def getRuleIndex(self):
            return ShellGrammarParser.RULE_single_quoted_content

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingle_quoted_content" ):
                return visitor.visitSingle_quoted_content(self)
            else:
                return visitor.visitChildren(self)




    def single_quoted_content(self):

        localctx = ShellGrammarParser.Single_quoted_contentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_single_quoted_content)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 125
                    _la = self._input.LA(1)
                    if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 1776) != 0):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume() 
                self.state = 130
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Back_quoted_contentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NON_KEYWORD(self, i:int=None):
            if i is None:
                return self.getTokens(ShellGrammarParser.NON_KEYWORD)
            else:
                return self.getToken(ShellGrammarParser.NON_KEYWORD, i)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(ShellGrammarParser.WS)
            else:
                return self.getToken(ShellGrammarParser.WS, i)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(ShellGrammarParser.SEMICOLON)
            else:
                return self.getToken(ShellGrammarParser.SEMICOLON, i)

        def BAR(self, i:int=None):
            if i is None:
                return self.getTokens(ShellGrammarParser.BAR)
            else:
                return self.getToken(ShellGrammarParser.BAR, i)

        def SQUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(ShellGrammarParser.SQUOTE)
            else:
                return self.getToken(ShellGrammarParser.SQUOTE, i)

        def DQUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(ShellGrammarParser.DQUOTE)
            else:
                return self.getToken(ShellGrammarParser.DQUOTE, i)

        def getRuleIndex(self):
            return ShellGrammarParser.RULE_back_quoted_content

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBack_quoted_content" ):
                return visitor.visitBack_quoted_content(self)
            else:
                return visitor.visitChildren(self)




    def back_quoted_content(self):

        localctx = ShellGrammarParser.Back_quoted_contentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_back_quoted_content)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132 
            self._errHandler.sync(self)
            _alt = 1+1
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1+1:
                    self.state = 131
                    _la = self._input.LA(1)
                    if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 1520) != 0):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()

                else:
                    raise NoViableAltException(self)
                self.state = 134 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Double_quoted_contentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.d_content = None # Token

        def back_quoted(self, i:int=None):
            if i is None:
